test/spec_vectors/memory_copy/ok/module_6.wat
(module (memory (export "memory0") 1 1) (data (i32.const 2) "") (data (i32.const 12) "") (func (export "test") (memory.copy (i32.const 10) (i32.const 12) (i32.const 7))) (func (export "load8_u") (param i32) (result i32) (i32.load8_u (local.get 0))))