test/spec_vectors/memory_copy/fail/module_59.wat
(module (memory 1 1) (func (export "testfn") (memory.copy (i64.const 10) (i64.const 20) (i32.const 30))))